[gd_scene load_steps=48 format=2]

[ext_resource path="res://scene/States.gd" type="Script" id=1]
[ext_resource path="res://image/ROBO_body_5.png" type="Texture" id=2]
[ext_resource path="res://script/MajinRouZ.gd" type="Script" id=3]
[ext_resource path="res://image/tile_2.png" type="Texture" id=4]
[ext_resource path="res://image/ROBO_wing.png" type="Texture" id=5]
[ext_resource path="res://scene/RightHand.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/LeftHand.tscn" type="PackedScene" id=7]
[ext_resource path="res://image/power_bar.png" type="Texture" id=8]
[ext_resource path="res://image/target_left.png" type="Texture" id=9]
[ext_resource path="res://image/ROBO_body_3.png" type="Texture" id=10]
[ext_resource path="res://image/ROBO_body_L.png" type="Texture" id=11]
[ext_resource path="res://image/ROBO_body.png" type="Texture" id=12]
[ext_resource path="res://resource/right_target_point.tres" type="Resource" id=13]
[ext_resource path="res://scene/RightTargetPoint1.tscn" type="PackedScene" id=14]
[ext_resource path="res://scene/RightTargetPoint2.tscn" type="PackedScene" id=15]
[ext_resource path="res://resource/left_target_point.tres" type="Resource" id=16]
[ext_resource path="res://scene/Explosion.tscn" type="PackedScene" id=17]
[ext_resource path="res://image/rocket_cloud.png" type="Texture" id=18]
[ext_resource path="res://image/ROBO_body_GO.png" type="Texture" id=19]
[ext_resource path="res://sound/魔王魂 効果音 機械効果音08.wav" type="AudioStream" id=20]
[ext_resource path="res://sound/ブースター.wav" type="AudioStream" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.8421, 10 )

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.0733333, 0.15, 0.173077, 0.305556, 0.401709, 1 )
colors = PoolColorArray( 0.846678, 0.853516, 0.803505, 1, 1, 0.960457, 0.714844, 1, 1, 1, 1, 1, 0.829102, 0.829102, 0.829102, 1, 1, 0.902725, 0.00390625, 1, 0.779297, 0.772162, 0.706238, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.307692, 0.583333, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.307692, 0.307692, 0.307692, 1, 0.459402, 0.459402, 0.459402, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
trail_color_modifier = SubResource( 6 )
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 2 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -5, 0 )
initial_velocity = 47.05
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 39.51
linear_accel_random = 1.0
radial_accel = -14.12
radial_accel_random = 0.92
angle = 720.0
angle_random = 1.0
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 4 )
hue_variation = 0.09
anim_speed = 4.02
anim_speed_random = 0.8

[sub_resource type="Animation" id=8]
resource_name = "damage"
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "end"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:lifetime")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.8, 0.1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 80, 10 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../LeftHand:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.5, 0.5, 0.5, 1 ), Color( 1.5, 0.5, 0.5, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../RightHand:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.5, 0.5, 1.5, 1 ), Color( 0.5, 0.5, 1.5, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Body:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 19 ), ExtResource( 11 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Body:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1.5, 1.5, 1.5, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1.5, 1.5, 1.5, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AudioStreamPlayer:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "start"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1344, 96 ), Vector2( 793, 448 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -137.9, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Body:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 12 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer2:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CanvasItemMaterial" id=12]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0.00407332, 0.2375 ), 0.0, 1.5683, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 0.0102272 ), 0.0, 2.28372, 0, 0, Vector2( 0.604888, 0.892045 ), 0.0, 0.0, 0, 0, Vector2( 0.731161, 0.0556818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 0.108974, 0.217949, 0.418803, 0.690171, 0.897436 )
colors = PoolColorArray( 1, 0.963943, 0.734375, 1, 1, 0.797073, 0.484375, 1, 0.980957, 0.548914, 0, 1, 1, 0.308796, 0.152344, 1, 0.539551, 0.125364, 0.0316143, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=18]
gradient = SubResource( 17 )

[sub_resource type="Curve" id=19]
max_value = 200.0
_data = [ Vector2( 0, 200 ), 0.0, -2114.91, 0, 0, Vector2( 0.175153, -188.636 ), -2356.8, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=21]
emission_shape = 2
emission_box_extents = Vector3( 2, 1, 1 )
flag_disable_z = true
spread = 70.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 50.0
angular_velocity_random = 0.3
angular_velocity_curve = SubResource( 16 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 500.0
linear_accel_random = 0.15
linear_accel_curve = SubResource( 20 )
angle = 180.0
angle_random = 0.5
angle_curve = SubResource( 14 )
scale = 1.5
scale_random = 0.25
color_ramp = SubResource( 18 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 6, 7 )

[sub_resource type="Animation" id=23]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("defaultAnimation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "default" ),
"times": PoolRealArray( 1.9 )
}

[sub_resource type="Animation" id=24]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 12 ) ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("defaultAnimation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "default" ),
"times": PoolRealArray( 1.9 )
}

[sub_resource type="Animation" id=25]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.7, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=26]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.7, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 10 ) ]
}

[node name="MajinRouZ" type="KinematicBody2D"]
position = Vector2( 1344, 96 )
rotation = -2.40681
z_index = 2
collision_mask = 768
script = ExtResource( 3 )

[node name="DamageArea" type="Area2D" parent="."]
collision_mask = 768

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( -1, 1 )
scale = Vector2( 0.759999, 1 )
shape = SubResource( 1 )

[node name="Explosion" parent="DamageArea" instance=ExtResource( 17 )]
material = SubResource( 2 )
process_material = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DamageArea"]
anims/damage = SubResource( 8 )
anims/default = SubResource( 9 )
anims/end = SubResource( 10 )
anims/start = SubResource( 11 )

[node name="Timer" type="Timer" parent="DamageArea"]

[node name="Particles2D" type="Particles2D" parent="DamageArea"]
material = SubResource( 12 )
position = Vector2( -1.33514e-05, 9 )
amount = 10
lifetime = 0.8
visibility_rect = Rect2( -10, -10, 20, 20 )
local_coords = false
draw_order = 1
process_material = SubResource( 21 )
texture = ExtResource( 18 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DamageArea"]
stream = ExtResource( 20 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="DamageArea"]
stream = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 22 )
disabled = true

[node name="States" type="Node" parent="."]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="States"]

[node name="ColorRect" type="ColorRect" parent="States/CanvasLayer"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 856.0
margin_top = -783.0
margin_right = -187.0
margin_bottom = -705.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="States/CanvasLayer"]
visible = false
margin_left = 424.0
margin_top = 821.0
margin_right = 913.0
margin_bottom = 860.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightEBar" type="TextureProgress" parent="States/CanvasLayer/VBoxContainer"]
margin_right = 194.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 8 )
radial_initial_angle = 105.2
radial_fill_degrees = 180.0
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftEBar" type="TextureProgress" parent="States/CanvasLayer/VBoxContainer"]
margin_left = 294.0
margin_right = 489.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 8 )
radial_initial_angle = 105.2
radial_fill_degrees = 180.0
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="States/CanvasLayer"]
visible = false
position = Vector2( 400.025, 841.322 )
texture = ExtResource( 9 )

[node name="wing" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Body" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 12 )

[node name="LeftHand" parent="." instance=ExtResource( 7 )]
position = Vector2( 5, 8 )
z_index = 1
z_as_relative = false
collision_layer = 2
left_point = ExtResource( 16 )

[node name="RightHand" parent="." instance=ExtResource( 6 )]
position = Vector2( -6, 8 )
z_index = 1
z_as_relative = false
Target_point_1 = ExtResource( 14 )
Target_point_2 = ExtResource( 15 )
right_point = ExtResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, 200 )
current = true

[node name="shotAnimation" type="AnimationPlayer" parent="."]
anims/L_shot = SubResource( 23 )
anims/R_shot = SubResource( 24 )
anims/default = SubResource( 25 )

[node name="defaultAnimation" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 26 )

[node name="DPar" parent="." instance=ExtResource( 17 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -4 )
emitting = true
one_shot = false
speed_scale = 0.5
visibility_rect = Rect2( -10, -100, 20, 100 )
draw_order = 1

[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="timeout" from="DamageArea/Timer" to="." method="_on_Timer_timeout"]

[editable path="LeftHand"]
[editable path="RightHand"]
[editable path="RightHand/RightFist"]
